--- a/test/fixtures/train_schedules.yml
+++ b/test/fixtures/train_schedules.yml
@@ -6,6 +6,7 @@ one:
   departs_time: 2017-10-23 11:01:17
   arrives_time: 2017-10-23 11:01:17
   train: one
+  days: ['A', 'B']
 
 two:
   departs: MyText
@@ -13,3 +14,4 @@ two:
   departs_time: 2017-10-23 11:01:17
   arrives_time: 2017-10-23 11:01:17
   train: two
+  days: ['A', 'B']
